--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,6 @@
   	<selenium.driver.version>3.5.2</selenium.driver.version>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  	<maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
   	<database.connection>ojdbc7</database.connection>
   </properties>
   <dependencies>
@@ -101,10 +99,9 @@
   			<artifactId>maven-compiler-plugin</artifactId>
   			<version>3.7.0</version>
   			<configuration>
-        		<source>1.8</source>
-        		<target>1.8</target>
-        	<encoding>ISO-8859-1</encoding>
-    </configuration>
+        		<source>${jdk.version}</source>
+        		<target>${jdk.version}</target>
+             </configuration>
   		</plugin>
   	</plugins>
   </build>
